--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@eslint/js": "^9.3.0",
-    "eslint": "^9.3.0",
-    "globals": "^15.3.0",
-    "typescript": "^5.0.2",
-    "typescript-eslint": "^7.11.0",
-    "vite": "^4.3.9"
+    "@eslint/js": "^8.56.0",
+    "eslint": "^8.56.0",
+    "globals": "^15.6.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1",
+    "vite": "^5.3.1",
+    "vite-plugin-glsl": "^1.3.0"
   }
 }
