--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+
+        "types": [
+            "vite-plugin-glsl/ext"
+        ]
     },
     "include": ["src"]
 }
