--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         "noFallthroughCasesInSwitch": true,
 
         "types": [
+            "vite/client",
             "vite-plugin-glsl/ext"
         ]
     },
